position announcement buttons absolutely so as not to ruin flow. Fixes #173

--- a/src/announcements/templates/announcements/base.html
+++ b/src/announcements/templates/announcements/base.html
@@ -3,7 +3,9 @@
 
 {% block head_title %}Announcements | {% endblock %}
 
-{% block head %}{% endblock %}
+{% block head %}
+    <link type="text/css" rel="stylesheet" href="{% static 'announcements/css/announcements.css' %}" />
+{% endblock %}
 
 {% block content_first %}{% endblock %}
 
