badge rarity popup, consolodate template snippet and badge code

--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -247,54 +247,26 @@
         </div>
         <div class="list-group-item">
           {% for assertion in assertions %}
-            {% with duplicates=assertion.get_duplicate_assertions %}
+            {% with assertions_of_this_badge=assertion.get_duplicate_assertions %}
             <a tabindex="0" class="badge-popover" role="button" data-toggle="popover"
             data-trigger="hover focus" data-placement="auto left" data-html="true"
             title="<h3 class='panel-title'>{{assertion.badge.name}}</h3>"
-            data-content='
-            <img class="icon-xl center-block img-rounded" src="{{assertion.badge.get_icon_url}}">
-            <p>{{assertion.badge.short_description}}</p>
-            <p>XP:
-            {% if assertion.game_lab_transfer %}
-              n/a (Badge Skipped)
-            {% else %}
-              {{assertion.badge.xp}}
-            {% endif %}</p>
-            <p>Requirements:<ul><small>
-            {% for p in assertion.badge.prereqs %}
-              <li>{{ p }}</li>
-            {% empty %}
-              <li>None (granted manually)</li>
-            {% endfor %}</ul></small></p>
+            data-content='{% include 'badges/snippets/badge_popover.html' with badge=assertion.badge%}'>
 
-            <p>Granted on: <small><ul>
-            {% for ass in duplicates %}
-              <li>{{ass.timestamp}}
-              {% if request.user.is_staff %}
-              <a class="btn btn-danger btn-xs" href="{% url 'badges:revoke' ass.id %}" role="button">
-                <i class="fa fa-trash-o"></i>
-              </a>
-              {% endif %}
-              </li>
-            {% endfor %}
-            </ul></small></p>
-
-            '>
-
-            <div class="icon-badge-container">
-              <img class="icon-xl img-rounded
-                {% if assertion.game_lab_transfer %} hackerbadge-transfer {% endif %}"
-                src="{{assertion.badge.get_icon_url}}">
-              {% if duplicates|length > 1 %}
-                <span class="badge badge-icon-lg progress-bar-info">{{duplicates|length}}</span>
-              {% endif %}
-            </div>
+              <div class="icon-badge-container">
+                <img class="icon-xl img-rounded
+                  {% if assertion.game_lab_transfer %} hackerbadge-transfer {% endif %}"
+                  src="{{assertion.badge.get_icon_url}}">
+                {% if assertions_of_this_badge|length > 1 %}
+                  <span class="badge badge-icon-lg progress-bar-info">{{assertions_of_this_badge|length}}</span>
+                {% endif %}
+              </div>
 
             </a>
             {% endwith %}
           {% empty %}
             None.
-          {% endfor %}
+          {% endfor %} {# for assertion in assertions #}
         </div>
       {% empty %}
           <div class="list-group-item">
