--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -26,44 +26,7 @@
                 <a tabindex="0" class="badge-popover" role="button" data-toggle="popover"
                     data-trigger="focus" data-placement="auto left" data-html="true"
                     title="<h3 class='panel-title'>{{badge.name}}</h3>"
-                    data-content='
-                    {% if not badge.active %}
-                        <p class="text-danger"><i class="fa fa-eye-slash"></i> INACTIVE</p>
-                    {% endif %}
-                    <p>{{badge.short_description}}</p>
-                    <p>XP: {{badge.xp}}</p>
-                    <p>Rarity: {{badge.get_rarity_icon}} <small>{{badge.percent_of_active_users_granted_this}}% have this badge</small></p>
-                    <!-- <p>Series: {{badge.series}}</p> -->
-                    <p>Requirements:<ul><small>
-                    {% for p in badge.prereqs %}
-                      <li>{{ p }}</li>
-                    {% empty %}
-                      <li>None (granted manually)</li>
-                    {% endfor %}</ul></small></p>
-                    {% if request.user.is_staff %}
-                    <div class="btn-group block" role="group">
-                      <a class="btn btn-warning" title="Edit" href="{% url 'badges:badge_update' badge.id %}" role="button">
-                        <i class="fa fa-edit"></i>
-                      </a>
-                      <a class="btn btn-primary" title="Copy" href="{% url 'badges:badge_copy' badge.id %}" role="button">
-                        <i class="fa fa-copy"></i>
-                      </a>
-                      <a class="btn btn-danger" title="Delete" href="{% url 'badges:badge_delete' badge.id %}" role="button">
-                        <i class="fa fa-trash-o"></i>
-                      </a>
-                    </div>
-                    <div class="btn-group block pull-right" role="group">
-                      <a class="btn btn-success" title="Grant to a student"
-                        href="{% url 'badges:grant' badge.id 0 %}" role="button">
-                        <i class="fa fa-user"></i>
-                      </a>
-                      <a class="btn btn-success" title="Bulk grant to multiple student"
-                        href="{% url 'badges:bulk_grant_badge' badge.id %}" role="button">
-                        <i class="fa fa-users"></i>
-                      </a>
-                    </div>
-                    {% endif %}
-                '>
+                    data-content='{% include 'badges/snippets/badge_popover.html'%}'>
                     <div class="thumbnail thumbnail-badge">
                         {% if not badge.active %}
                             <i class="fa fa-2x fa-eye-slash pull-right text-danger" style="position:absolute;"></i>
