--- a/src/badges/templates/badges/detail.html
+++ b/src/badges/templates/badges/detail.html
@@ -1,7 +1,7 @@
 {% extends "badges/base.html" %}
 {% load crispy_forms_tags %}
 
-{% block heading_inner %} {{ heading }}{% endblock %}
+{% block heading_inner %} Badge: {{ heading }}{% endblock %}
 
 {% block content %}
 
@@ -11,6 +11,64 @@
     </div>
     <div class="media-body">
       {{ badge.short_description }}
+    </div>
+  </div>
+  <p></p>
+  <div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading"><h3 class="panel-title">Badge Details</h3></div>
+    <div class="panel-body">
+      <p>XP: {{badge.xp}}</p>
+      <p>Type: <span title="{{badge.badge_type.description}}"><i class="fa {{badge.badge_type.fa_icon}}"></i> {{badge.badge_type}}</span></p>
+      <p>Rarity: {{badge.get_rarity_icon|safe}} {{badge.percent_of_active_users_granted_this}}% have earned this badge</p>
+      <p>Requirements:</p>
+
+      <ul><small>
+      {% for p in badge.prereqs %}
+        <li><a href="{{ p.get_prereq.get_absolute_url }}">{{ p }}</a></li>
+      {% empty %}
+        <li>None (granted manually)</li>
+      {% endfor %}
+      </small></ul>
+
+      {% if assertions_of_this_badge %} {# If a student is looking at this, it will show which badges they have earned #}
+      <p>Earned: </p>
+      <ol>
+      {% for assertion in assertions_of_this_badge %}
+        <li>{{assertion.timestamp}}
+          {% if request.user.is_staff %} {# staff can revoke badges #}
+          <a class="btn btn-danger btn-xs" href="{% url 'badges:revoke' assertion.id %}" role="button">
+            <i class="fa fa-trash-o"></i>
+          </a>
+          {% endif %}
+        </li>
+      {% endfor %}
+      </ol>
+      {% endif %} {# if assertions #}
+
+      {% if request.user.is_staff %} {# staff can manage badges from popup #}
+      <div class="btn-group block" role="group">
+        <a class="btn btn-warning" title="Edit" href="{% url 'badges:badge_update' badge.id %}" role="button">
+          <i class="fa fa-edit"></i>
+        </a>
+        <a class="btn btn-primary" title="Copy" href="{% url 'badges:badge_copy' badge.id %}" role="button">
+          <i class="fa fa-copy"></i>
+        </a>
+        <a class="btn btn-danger" title="Delete" href="{% url 'badges:badge_delete' badge.id %}" role="button">
+          <i class="fa fa-trash-o"></i>
+        </a>
+      </div>
+      <div class="btn-group block pull-right" role="group">
+        <a class="btn btn-success" title="Grant to a student"
+          href="{% url 'badges:grant' badge.id 0 %}" role="button">
+          <i class="fa fa-user"></i>
+        </a>
+        <a class="btn btn-success" title="Bulk grant to multiple student"
+          href="{% url 'badges:bulk_grant_badge' badge.id %}" role="button">
+          <i class="fa fa-users"></i>
+        </a>
+      </div>
+      {% endif %} {# if staff #}
     </div>
   </div>
 
