--- a/src/badges/templates/badges/snippets/badge_popover_content.html
+++ b/src/badges/templates/badges/snippets/badge_popover_content.html
@@ -6,7 +6,7 @@
 
 <p>XP: {{badge.xp}}</p>
 
-<p>Rarity: {{badge.get_rarity_icon}} <small>{{badge.percent_of_active_users_granted_this}}% have earned this badge</small></p>
+<p>Rarity: {{badge.get_rarity_icon|safe}} <small>{{badge.percent_of_active_users_granted_this}}% have earned this badge</small></p>
 
 <!-- <p>Series: {{badge.series}}</p> -->
 
@@ -14,15 +14,15 @@
 
 <ul><small>
 {% for p in badge.prereqs %}
-  <li>{{ p }}</li>
+  <li><a href='{{ p.get_prereq.get_absolute_url }}'>{{ p }}<a/></li>
 {% empty %}
   <li>None (granted manually)</li>
 {% endfor %}
 </small></ul>
 
 {% if assertions_of_this_badge %} {# If a student is looking at this, it will show which badges they have earned #}
-<p>Granted on: </p>
-<ul><small>
+<p>Earned: </p>
+<ol><small>
 {% for assertion in assertions_of_this_badge %}
   <li>{{assertion.timestamp}}
     {% if request.user.is_staff %} {# staff can revoke badges #}
@@ -32,7 +32,7 @@
     {% endif %}
   </li>
 {% endfor %}
-</small></ul>
+</small></ol>
 {% endif %} {# if assertions #}
 
 {% if request.user.is_staff %} {# staff can manage badges from popup #}
