--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -250,9 +250,10 @@
             {% with assertions_of_this_badge=assertion.get_duplicate_assertions %}
             <a tabindex="0" class="badge-popover" role="button" data-toggle="popover"
             data-trigger="hover focus" data-placement="auto left" data-html="true"
-            title="<h3 class='panel-title'>{{assertion.badge.name}}</h3>"
-            data-content='{% include 'badges/snippets/badge_popover.html' with badge=assertion.badge%}'>
-
+            {% with badge=assertion.badge %}
+            title="{% include 'badges/snippets/badge_popover_title.html' %}"
+            data-content="{% include 'badges/snippets/badge_popover_content.html' %}">
+            {% endwith %}
               <div class="icon-badge-container">
                 <img class="icon-xl img-rounded
                   {% if assertion.game_lab_transfer %} hackerbadge-transfer {% endif %}"
