fix broken popover placement. closes #213

--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -24,7 +24,7 @@
           {% if request.user.is_staff or badge.active %}
               <div class="col-xs-4 col-sm-3 col-md-2 col-badge">
                 <a tabindex="0" class="badge-popover" role="button" data-toggle="popover"
-                    data-trigger="focus" data-placement="auto left" data-html="true"
+                    data-trigger="focus" data-placement="auto left" data-container="body" data-html="true"
                     title="{% include 'badges/snippets/badge_popover_title.html' %}"
                     data-content="{% include 'badges/snippets/badge_popover_content.html'%}">
                     <div class="thumbnail thumbnail-badge">
@@ -56,9 +56,7 @@
 {% block js %}
 <script>
 $(document).ready(function() {
-  $('[data-toggle="popover"]').popover(
-
-  )
+  $('[data-toggle="popover"]').popover()
 });
 </script>
 {% endblock %}
