--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -287,9 +287,7 @@
 {% block js %}
 <script>
 $(document).ready(function() {
-  $('[data-toggle="popover"]').popover(
-
-  )
+  $('[data-toggle="popover"]').popover()
 });
 </script>
 {% endblock %}
