--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,6 +25,10 @@
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
+    <!-- ** extrahead block (for postman) ** -->
+    {% block extrahead %}{% endblock %}
+    <!-- ** end extrahead block ** -->
+
     <!-- ** head block ** -->
     {% block head %}{% endblock %}
     <!-- ** end head block ** -->
