--- a/src/templates/postman/view.html
+++ b/src/templates/postman/view.html
@@ -19,19 +19,19 @@
 <form action="" method="post">{% csrf_token %}
 <input type="hidden" {% if pm_messages|length > 1 and message.thread_id %}name="tpks" value="{{ message.thread_id }}"{% else %}name="pks" value="{{ message.pk }}"{% endif %} />
 <a href="{{ next_url }}" class="pm_action pm_action-back">{% trans "Back" %}</a>
-<span id="pm_buttons">
+<span id="pm_buttons" class="btn-group">
 <button type="submit" class="pm_btn pm_btn-delete btn btn-danger"
  onclick="this.form.action='{% url 'postman:delete' %}?next={{ next_url|urlencode }}'">{% trans "Delete" %}</button>
 {% if not archived %}<button type="submit" class="pm_btn pm_btn-archive btn btn-warning"
  onclick="this.form.action='{% url 'postman:archive' %}?next={{ next_url|urlencode }}'">{% trans "Archive" %}</button>{% endif %}
 </span>
-{% if reply_to_pk %}<a href="{% url 'postman:reply' reply_to_pk %}?next={{ next_url|urlencode }}"
- class="pm_action pm_action-reply btn btn-primary">{% trans "Reply" %}</a>{% endif %}
+{% comment %} {% if reply_to_pk %}<a href="{% url 'postman:reply' reply_to_pk %}?next={{ next_url|urlencode }}"
+ class="pm_action pm_action-reply btn btn-primary">{% trans "Reply" %}</a>{% endif %} {% endcomment %}
 </form>
 {% if reply_to_pk %}<hr />
-<h2>{% trans 'Reply' %}</h2>
+<h3>{% trans 'Reply' %}</h3>
 <form action="{% url 'postman:reply' reply_to_pk %}?next={{ next_url|urlencode }}" method="post">{% csrf_token %}
-<div id="pm_reply">{{ form.body }}</div>
+<div id="pm_reply">{{ form | crispy }}</div>
 <button type="submit" class="pm_btn pm_btn-reply btn btn-primary">{% trans 'Reply' %}</button>
 </form>{% endif %}
 {% endif %}
