--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -58,8 +58,8 @@
        class="list-group-item {% if '/messages/' in request.path_info %}active{% endif %}"
        href="{% url 'postman:inbox' %}">
       <i class="fa fa-comments-o fa-fw"></i>&nbsp; Messages
-      {% if postman_unread %}
-      <span id="messages-badge" class="badge alert-danger list-group-item-badge ">{% postman_unread as unread_count %}{{unread_count}}</span>
+      {% postman_unread as unread_count %}{% if unread_count %}
+      <span id="messages-badge" class="badge alert-danger list-group-item-badge ">{{unread_count}}</span>
       {% endif %}
     </a>
 
