--- a/src/static_in_project/static_root/css/custom_slate.css
+++ b/src/static_in_project/static_root/css/custom_slate.css
@@ -11,11 +11,11 @@ figure {
     background-color: #272b30;
 }
 
-.navbar-fixed-top.chillax {
+/* .navbar-fixed-top.chillax {
   background-color: #337AB7;
   background-image: none;
   text-shadow: none;
-}
+} */
 
 .jumbotron {
   background-color: black;
