--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -4,7 +4,7 @@
 
 <!-- Fixed navbar -->
 <nav class="navbar navbar-default navbar-fixed-top"
-style="{% color_style_from_mark %)">
+style='{% color_style_from_mark user.profile.dark_theme %}'>
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed"
