--- a/src/static_in_project/static_root/css/custom_slate.css
+++ b/src/static_in_project/static_root/css/custom_slate.css
@@ -302,6 +302,5 @@ a.list-group-item-muted {
 }
 
 .note-color-palette div .note-color-btn {
-    border-color: #272b30; !important;
+    border-color: #272b30 !important;
 }
-
