--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -248,16 +248,16 @@
         <div class="list-group-item">
           {% for assertion in assertions %}
             {% with assertions_of_this_badge=assertion.get_duplicate_assertions badge=assertion.badge %}
-            <div class="hidden-xs"> {# only use popover on wider screens #}
+            <span class="hidden-xs"> {# only use popover on wider screens #}
               <a {% include 'badges/snippets/badge_popover.html' %} >
                 {% include 'profile_manager/snippets/profile_badge.html' %}
               </a>
-            </div>
-            <div class="visible-xs-inline-block"> {# direct link on mobile #}
+            </span>
+            <span class="visible-xs-inline-block"> {# direct link on mobile #}
               <a href="{{badge.get_absolute_url}}">
                 {% include 'profile_manager/snippets/profile_badge.html' %}
               </a>
-            </div>
+            </span>
             {% endwith %}
           {% empty %}
             None.
