--- a/src/templates/postman/message.html
+++ b/src/templates/postman/message.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% load postman_tags %}
+{% load i18n %}{% load postman_tags %}{% load attachments_tags %}
   {% comment %} <div class="pm_message{% if message.is_pending %} pm_pending{% endif %}{% if message.is_rejected %} pm_rejected{% endif %}{% if message.sender == user and message.sender_archived or message.recipient == user and message.recipient_archived %} pm_archived{% endif %}{% if message.sender == user and message.sender_deleted_at or message.recipient == user and message.recipient_deleted_at %} pm_deleted{% endif %}{% if message.recipient == user and not message.read_at %} pm_unread{% endif %}">
     <div class="pm_header">
       <span class="pm_sender">{{ message.obfuscated_sender|or_me:user }}</span> &raquo;
@@ -26,4 +26,16 @@
     </h3>
     <div class="comment-heading-divider"></div>
     <div class="comment-content">{{message.body|safe}}</div>
+    <ul>
+      {% get_attachments_for message as attachments %}
+      {% for attachment in attachments %}
+      <li class="file-link"><a  href="{{ attachment.attachment_file.url }}" target="_blank" >{{ attachment.filename }}</a>
+          {% comment %} {% if document.is_valid_portfolio_type %}
+          <a title = "Add {{ document.docfile|filename }} to your portfolio."
+                      href="{% url 'portfolios:art_add' document.id %}"
+          class="btn btn-default btn-xs pull-right">Add to Portfolio</a>
+          {% endif %} {% endcomment %}
+      </li>
+      {% endfor %}
+    </ul>
   </li>
